--- a/Proje.UI/appsettings.json
+++ b/Proje.UI/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConStr": "Server=DESKTOP-QLKMCAN;Database=HamburgerProjeDB;Uid=sa;Pwd=123;"
+    "ConStr": "Server=Ahmet-PC;Database=HamburgerProjeDB;Uid=sa;Pwd=Ahmet123;"
   }
 }
